Fix: Hide Scrollbar in der Freundesliste

--- a/ProjectZero/src/application/data/css/ProjectZero_Theme.css
+++ b/ProjectZero/src/application/data/css/ProjectZero_Theme.css
@@ -184,3 +184,8 @@
     -fx-font-style: italic;
     -fx-fill: -fx-primary;
 }
+
+.scroll-bar:vertical {
+    -fx-opacity: 0;
+    -fx-padding:-7;
+}
